Minimum width of time column stops overflow

--- a/static/stylesheets/schedule_style.css
+++ b/static/stylesheets/schedule_style.css
@@ -20,8 +20,8 @@ margin: 0.2em;
 
 .schedule {
   display: grid;
-  grid-template-columns: 1fr 3fr 3fr;
-  grid-template-rows: repeat(74, 20px);
+  grid-template-columns: minmax(12em, 1fr) 3fr 3fr;
+  grid-template-rows: repeat(74, 1.4em);
   font-family: "Nunito";
 }
 .time-row{
